SUBDIRS = src include
EXTRA_DIST = \
  debian/README.Debian \
  debian/changelog \
  debian/compat \
  debian/control \
  debian/copyright \
  debian/cxxtools-dev.dirs \
  debian/cxxtools-dev.files \
  debian/cxxtools-dev.install \
  debian/cxxtools.dirs \
  debian/cxxtools.files \
  debian/cxxtools.install \
  debian/dirs \
  debian/docs \
  debian/rules
