SUBDIRS = libltdl src include demo

EXTRA_DIST = \
  debian/README.Debian \
  debian/changelog \
  debian/compat \
  debian/control \
  debian/copyright \
  debian/libcxxtools-dev.install \
  debian/libcxxtools.install \
  debian/libcxxtools-log.install \
  debian/libcxxtools-log-dev.install \
  debian/rules
